- Ajuste para não ficar fixo.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,34 @@
-### application.properties Documentado ###
+#trocar aqui -- sem barra no final
+auth0.dominio.url=Seu_Domínio_Auth0
 
 # Configurações do Auth0
 # O client ID do Auth0, necessário para autenticação
+#trocar aqui
 auth0.client-id=Seu_Client_ID_no_Auth0
 
 # O client secret do Auth0, utilizado para autenticação segura
+#trocar aqui
 auth0.client-secret=Seu_Client_Secret_no_Auth0
 
 # O público (audience) para o qual os tokens são emitidos
+#trocar aqui
 auth0.audience=audience-my-api
 
 # URL do endpoint do Auth0 para obtenção de tokens JWT
-auth0.token-url=https://Seu_Domínio_Auth0/oauth/token
+auth0.token-url=https://${auth0.dominio.url}/oauth/token
 
 # Configuração do SmallRye JWT
 # Define o caminho do grupo de permissões dentro do token JWT
+#trocar aqui
 smallrye.jwt.path.groups=rlr
+#trocar aqui - igual ao de cima
 smallrye.jwt.claims.groups=rlr
 
 # Configuração do MicroProfile JWT
 # Define o local da chave pública do Auth0 para validação dos tokens JWT
-mp.jwt.verify.publickey.location=https://Seu_Domínio_Auth0/.well-known/jwks.json
+mp.jwt.verify.publickey.location=https://${auth0.dominio.url}/.well-known/jwks.json
+
+auth-client/mp-rest/url=https://${auth0.dominio.url}
 
 # Ativar o OpenAPI/Swagger
 quarkus.smallrye-openapi.path=/swagger
